<resources>
    <string name="app_name">TVA_projekt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="label_acc">Dont have an Account?      </string>
    <string name="signup">SignUp</string>
    <string name="label_header">Login</string>
    <string name="register_header">Register</string>
    <string name="register">Register</string>
    <string name="menu">MENU</string>
    <string name="btnIzbiraPoti">Choose path</string>
    <string name="btnVremenski_podatki">WEATHER</string>
    <string name="btn_zapiski_poti">ROUTE NOTES</string>
    <string name="btn_osvojeni_vrhovi">CONQUERED PEAKS</string>
    <string name="btn_razmere_na_vrhovih">RELATIONSHIPS AT THE TOP</string>
    <string name="btn_spletne_kamere">WEB CAMERAS</string>
    <string name="btn_zemljevid">MAPS</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_dodaj_zapis"> ADD CONQUER LOG</string>

    <string name="facebook_app_id" translatable="false">608827034097783</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb608827034097783</string>
    <string name="facebook_client_token" translatable="false">685b33351b9f8581e2112084542bc47f</string>
    <string name="DodajIme">Ime poti</string>
    <string name="DodajKomentar">Dodaj komentar</string>
    <string name="DodajDatum">Dodaj datum</string>
    <string name="dodajVzpon">Dodaj vzpon</string>
    <string name="btnDodajzapis">Dodaj zapis</string>
    <string name="imegore">Ime gore</string>
    <string name="getdirection">Pridobi navodila</string>
    <string name="statistika">Statistika</string>
    <string name="imepoti">Ime poti</string>
    <string name="zahtevnost">Zahtevnost</string>
    <string name="latitude">latitude</string>
    <string name="opispoti">Opis poti</string>
    <string name="opisizhodisca">Opis izhodisca</string>
    <string name="prikazpoti">Prikaz poti</string>
    <string name="imegorovja">Ime gorovja</string>
    <string name="vrh">vrh</string>
    <string name="sharelink">Deli objavo</string>
    <string name="pridobivanjevreme">Pridobivanje podatkov</string>
    <string name="drugomesto">Iskanje drugega mesta</string>
    <string name="mapa">MAPS</string>
    <string name="internet">Internet failed, please connect and refresh page.</string>
</resources>